--- a/src/app/list-categories/list-categories.component.html
+++ b/src/app/list-categories/list-categories.component.html
@@ -13,7 +13,7 @@
     <button class="btn btn-primary">Voir produits</button>
     </div>
     <div class="col-md-4" style="margin-bottom: 20px;">
-    <img src="assets/images/categorie_produits_informatiques.jpg"
+    <img src="assets/images/categorie_produits_informatiques.png"
     alt="Produits informatiques" class="img-fluid h-50 w-75">
     <h3>Produits informatiques</h3>
     <button class="btn btn-primary">Voir produits</button>
