--- a/src/app/list-categories/list-categories.component.html
+++ b/src/app/list-categories/list-categories.component.html
@@ -1,6 +1,17 @@
 <div class="container">
     <div class="row">
-    <div class="col-md-4" style="margin-bottom: 20px;">
+    <div class="col-md-4" style="margin-bottom: 20px;" *ngFor="let categorie of categories">
+        
+        <img [src]="categorie.image" alt="{{ categorie.title }}" class="img-fluid h-50 w-75">
+            <h3> {{ categorie.title }}</h3> 
+            <p> {{ categorie.description }}</p> 
+
+              <button class="btn btn-primary">Voir produits</button>
+
+              
+          
+
+          <!-- 
     <img src="assets/images/categorie_electromenager.jpg" alt="Grand
     électroménager" class="img-fluid h-50 w-75">
     <h3>Grand électroménager</h3>
@@ -35,6 +46,6 @@
     class="img-fluid h-50 w-75">
     <h3>Produits voiture</h3>
     <button class="btn btn-primary">Voir produits</button>
-    </div>
+    </div> --> 
     </div>
     </div>
