--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav [ngClass]="{'navbar-dark bg-dark': isAdmin, 'navbar-light bg-light': !isAdmin}" class="navbar navbar-expand-lg">
     <div class="container-fluid">
     <a class="navbar-brand" href="#">TWINStore</a>
     <button class="navbar-toggler" type="button" data-bstoggle="
