--- a/src/app/list-categories/list-categories.component.html
+++ b/src/app/list-categories/list-categories.component.html
@@ -6,7 +6,8 @@
             <h3> {{ categorie.title | uppercase }}</h3> 
             <p> {{ categorie.description }}</p> 
 
-              <button class="btn btn-primary">Voir produits</button>
+              <button class="btn btn-primary" *ngIf="categorie.available">Voir produits</button>
+              <p class="text-danger" *ngIf="!categorie.available">Catégorie non disponible</p>
 
               
           
