--- a/src/app/list-categories/list-categories.component.html
+++ b/src/app/list-categories/list-categories.component.html
@@ -2,7 +2,9 @@
     <div class="row">
     <div class="col-md-4" style="margin-bottom: 20px;" *ngFor="let categorie of categories">
         
-        <img [src]="categorie.image" alt="{{ categorie.title }}" class="img-fluid h-50 w-75">
+        <img [src]="categorie.image" 
+        (click)="showDescription(categorie.description)"
+        alt="{{ categorie.title }}" class="img-fluid h-50 w-75">
             <h3> {{ categorie.title | uppercase }}</h3> 
             <p> {{ categorie.description }}</p> 
 
