--- a/src/app/list-categories/list-categories.component.html
+++ b/src/app/list-categories/list-categories.component.html
@@ -8,6 +8,7 @@
 
        
         <img [src]="categorie.image" 
+        appHighlightDirective
         (click)="showDescription(categorie.description)"
         alt="{{ categorie.title }}" class="img-fluid h-50 w-75">
             <h3> {{ categorie.title | uppercase }}</h3> 
