--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <li class="nav-item">
     <a class="nav-link active" aria-current="page"
-    href="#">Accueil</a>
+    routerLink="/home">Accueil</a>
     </li>
     <li class="nav-item">
     <a class="nav-link" href="#">Produits</a>
