--- a/src/app/list-categories/list-categories.component.html
+++ b/src/app/list-categories/list-categories.component.html
@@ -14,7 +14,7 @@
             <h3> {{ categorie.title | uppercase }}</h3> 
             <p> {{ categorie.description }}</p> 
 
-              <button class="btn btn-primary" *ngIf="categorie.available">Voir produits</button>
+              <button class="btn btn-primary" *ngIf="categorie.available"  [routerLink]="['/products', categorie.id] ">Voir produits</button>
               <p class="text-danger" *ngIf="!categorie.available">Catégorie non disponible</p>
 
               
