--- a/src/app/products-category-component/products-category-component.component.html
+++ b/src/app/products-category-component/products-category-component.component.html
@@ -1,1 +1,15 @@
-<p>products-category-component works!</p>
+<div class="container">
+    <h1>Produits de la catégorie {{categoryId}}</h1>
+    <div class="row">
+        <div class="col-md-4" style="margin-bottom: 20px;" *ngFor="let product of filteredProducts">
+            <div class="card">
+                <img [src]="product.image" alt="{{product.name}}" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">{{product.name}}</h5>
+                    <p class="card-text">{{product.description}}</p>
+                    <p class="card-text">{{product.price}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
