--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,16 +14,16 @@
     routerLink="/home">Accueil</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" href="#">Produits</a>
+    <a class="nav-link" routerLink="/products">Produits</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" href="#">A propos</a>
+    <a class="nav-link" routerLink="/a-propos">A propos</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" href="#">Profile</a>
+    <a class="nav-link" routerLink="/profile">Profile</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" href="#">Contact</a>
+    <a class="nav-link" routerLink="/contact">Contact</a>
     </li>
     </ul>
     </div>
