--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,6 +25,9 @@
     <li class="nav-item">
     <a class="nav-link" routerLink="/contact">Contact</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/add-product">Add Product</a>
+      </li>
     </ul>
     </div>
     </div>
