--- a/src/app/list-categories/list-categories.component.html
+++ b/src/app/list-categories/list-categories.component.html
@@ -10,7 +10,8 @@
         [title]="categorie.title"
         [description]="categorie.description"
         [available]="categorie.available"
-        [btnText]="'Voir produits'">
+        [btnText]="'Voir produits'"
+        (addToShortList)="addToShortList($event)">
       </app-card-component>
     </div>
   </div>
