--- a/src/app/list-categories/list-categories.component.html
+++ b/src/app/list-categories/list-categories.component.html
@@ -10,9 +10,9 @@
         [title]="categorie.title"
         [description]="categorie.description"
         [available]="categorie.available"
-        [btnText]="'Voir produits'"
         (addToShortList)="addToShortList($event)">
       </app-card-component>
     </div>
   </div>
 </div>
+<app-list-products-component></app-list-products-component>
