--- a/src/app/products-category-qp/products-category-qp.component.html
+++ b/src/app/products-category-qp/products-category-qp.component.html
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="col-md-4" *ngFor="let product of filteredProducts">
       <div class="card mb-4">
-        <img [src]="product.image" class="card-img-top" [alt]="product.name">
+        <img [src]="product.image" class="card-img-top" [alt]="product.title">
         <div class="card-body">
-          <h5 class="card-title">{{product.name}}</h5>
-          <p class="card-text">Prix: {{product.price}} €</p>
-          <p class="card-text">Marque: {{product.brand}}</p>
+          <h5 class="card-title">{{product.title}}</h5>
+          <p class="card-text">Prix: {{product.description}}</p>
+          <p class="card-text">Quantité: {{product.quantity}}</p>
         </div>
       </div>
     </div>
